GoalTracker/force-app/main/default/objects/Gift_Membership_Setting__mdt/Gift_Membership_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Gift Membership Setting</label>
    <pluralLabel>Gift Membership Settings</pluralLabel>
</CustomObject>