GoalTracker/force-app/main/default/objects/Gift_Membership_Setting__mdt/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>