GoalTracker/force-app/main/default/objects/Gift_Membership_Setting__mdt/fields/futureFloor__c.field-meta.xml
<CustomField>
    <fullName>futureFloor__c</fullName>
    <label>futureFloor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>