GoalTracker/force-app/main/default/objects/Gift_Membership_Setting__mdt/fields/futureTop__c.field-meta.xml
<CustomField>
    <fullName>futureTop__c</fullName>
    <label>futureTop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>