GoalTracker/force-app/main/default/objects/Gift_Membership_Setting__mdt/fields/memberFloor__c.field-meta.xml
<CustomField>
    <fullName>memberFloor__c</fullName>
    <label>memberFloor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>