GoalTracker/force-app/main/default/objects/Gift_Membership_Setting__mdt/fields/memberTop__c.field-meta.xml
<CustomField>
    <fullName>memberTop__c</fullName>
    <label>memberTop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>