GoalTracker/force-app/main/default/objects/Gift_Membership_Setting__mdt/fields/rank__c.field-meta.xml
<CustomField>
    <fullName>rank__c</fullName>
    <label>rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>